--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,12 @@
 <!doctype html>
 <html lang="en">
-    <head>
-          <meta charset="UTF-8" />
-          <meta
-                  name="viewport"
-                  content="width=device-width, initial-scale=1.0, maximum-scale=1"
-                />
-          <title>Dashboard Oficina Doctor Auto</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>Dashboard Oficina Doctor Auto</title>
+  </head>
   <body>
-        <div id="root"></div>div>
-        <script type="module" src="/src/main.tsx"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
-</html>html>
-  </body></title>
-    </head>
+</html>
